# dsym

./: README.md  install.sh  pyproject.toml
dsym/: config.ini  dsym.py
syscon/: dsym.py
