[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dsym"]

[project]
name = "dsym"
version = "1.0.0"
description = "DSYM: manage your dotfiles with git"

authors = [ { name = "0x17", email = "post@nerdbude.com" } ]

readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
syscon = "dsym.cli:main"

[project.license]
file = "LICENSE"
